--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,12 +1,19 @@
-   <header>
-      <ul>
-        <li><img class="logo" src="/static/images/logo.png"></li>
-        <li><a href="/">Browse</a></li>
-        <li><a href="/create">Add a Cube</a></li>
-          <li><a href="/create/accessory">Create Accessory</a></li>
-        <li><a href="/about">About</a></li>
-         <li><a href="/logout">Logout</a></li>
-        <li><a href="/login">Login</a></li>
-         <li><a href="/register">Register</a></li>
-      </ul>
-    </header>
+<header>
+  <ul>
+    <li><img class="logo" src="/static/images/logo.png"></li>
+    <li><a href="/">Browse</a></li>
+    {{#if isLoggedIn}}
+    <li><a href="/create">Add a Cube</a></li>
+    <li><a href="/create/accessory">Create Accessory</a></li>
+    {{/if}}
+
+    <li><a href="/about">About</a></li>
+    
+    {{#if isLoggedIn}}
+    <li><a href="/logout">Logout</a></li>
+    {{else}}
+    <li><a href="/login">Login</a></li>
+    <li><a href="/register">Register</a></li>
+    {{/if}}
+  </ul>
+</header>
